<resources>
    <string name="app_name">Story App</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username_hint">Enter Username</string>
    <string name="email_hint">Enter Email</string>
    <string name="password_hint">Enter Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="img_signIn">Sign In Page Image</string>
    <string name="ask_account">Don\'t Have an Account Yet?</string>
    <string name="have_account">Already Have an Account?</string>
    <string name="token">Token</string>
    <string name="error_invalid_email">Invalid Email Address</string>
    <string name="error_field_required">This Field is Required</string>
    <string name="error_invalid_password">Passwords must be at least 8 characters long</string>
    <string name="sign_out">Sign Out</string>
    <string name="detail_story">Detail Story</string>
    <string name="upload">Upload</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="permission_request_granted">Permission request granted</string>
    <string name="permission_request_denied">Permission request denied</string>
    <string name="no_media_selected">No media selected</string>
    <string name="failed_to_open_camera">Failed to open camera</string>
    <string name="failed_to_capture_image">Failed to capture image</string>
    <string name="failed_upload_image">Failed upload image</string>
    <string name="description">Description</string>
</resources>