<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.LoginActivity">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="@dimen/_48"
       android:layout_marginStart="@dimen/_16"
       android:layout_marginEnd="@dimen/_16">

       <ImageView
           android:id="@+id/iv_sign_in"
           android:layout_width="240dp"
           android:layout_height="240dp"
           android:src="@drawable/sign_in"
           android:contentDescription="@string/img_signIn"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"/>

       <com.rhbekti.mystory.presentation.customviews.EmailEditText
           android:id="@+id/tf_email"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           app:startIconDrawable="@drawable/baseline_email_24"
           android:hint="@string/email"
           app:layout_constraintTop_toBottomOf="@+id/iv_sign_in"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:alpha="0"
           tools:alpha="100"/>

       <com.rhbekti.mystory.presentation.customviews.PasswordEditText
           android:id="@+id/tf_password"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           app:startIconDrawable="@drawable/baseline_lock_24"
           app:endIconMode="password_toggle"
           android:layout_marginTop="@dimen/_16"
           android:hint="@string/password"
           android:alpha="0"
           tools:alpha="100"
           app:layout_constraintTop_toBottomOf="@id/tf_email"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"/>

       <com.google.android.material.button.MaterialButton
           android:id="@+id/btn_submit"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginTop="@dimen/_16"
           app:layout_constraintTop_toBottomOf="@+id/tf_password"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           android:text="@string/sign_in"
           android:alpha="0"
           tools:alpha="100"/>

       <TextView
           android:id="@+id/tv_ask_account"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/ask_account"
           android:layout_marginTop="@dimen/_16"
           app:layout_constraintTop_toBottomOf="@id/btn_submit"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"/>

       <com.google.android.material.button.MaterialButton
           android:id="@+id/btn_register"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/sign_up"
           style="@style/Widget.MaterialComponents.Button.TextButton"
           app:layout_constraintTop_toBottomOf="@id/tv_ask_account"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"/>

       <ProgressBar
           android:id="@+id/progressBar"
           style="?android:attr/progressBarStyle"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:visibility="gone"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintBottom_toBottomOf="parent"
           tools:visibility="visible"/>

   </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>